correction de bug